[ft] : fix with score and time limit.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 <span class="label">CASH:</span>
                 <span id="cash-amount" class="value cash-amount">$100,000</span>
             </div>
+            <div class="ui-element">
+                <span class="label">TIME:</span>
+                <span id="time-remaining" class="value time-remaining">0:30</span>
+            </div>
         </div>
         
         <div class="trading-panel">
@@ -65,8 +69,8 @@
         <canvas id="gameCanvas" width="800" height="600"></canvas>
         
         <div class="instructions">
-            <p>HOLD LEFT MOUSE BUTTON OR SPACEBAR TO BUY BITCOIN</p>
-            <p>RELEASE TO SELL ALL HOLDINGS</p>
+            <p>CLICK SPACEBAR OR MOUSE TO BUY/SELL BITCOIN</p>
+            <p>YOU HAVE 30 SECONDS TO MAKE THE MOST PROFIT!</p>
             <p>P: PAUSE | R: RESTART | M: MENU | +/-: SPEED</p>
         </div>
     </div>
